# sandbox

./: .gitignore
_angular-md/: Makefile  package-lock.json  (+2 more)
agents/effective-agents/: pyproject.toml
agents/effective-agents/1_introduction/: 1_basic.py  2_structured.py  3_tools.py  4_retrieval.py
agents/effective-agents/2_workflow_patterns/: 1_prompt_chaining.py  2_routing.py
mcp-client-server/: CHANGELOG.md  PLANNING.md  README.md  TASKS.md  pyproject.toml
mcp-client-server/.github/: copilot-instructions.md
mcp-client-server/backend/: .gitignore  checkpointer.db-shm  checkpointer.db-wal  pyproject.toml
mcp-client-server/backend/docs/: sample-responses.md
mcp-client-server/backend/scripts/: clean.sh
mcp-client-server/backend/src/: dto.py  instrumentation.py  main.py  template.py  tools.py  type_definitions.py
mcp-client-server/backend/src/api/: chat_controller.py  dependencies.py
mcp-client-server/backend/src/application/: chat_service.py  graph_node_service.py
mcp-client-server/backend/src/domain/chat/: interfaces.py
mcp-client-server/backend/src/domain/llm/: interfaces.py  models.py
mcp-client-server/backend/src/infrastructure/copilotkit/: copilotkit.py
mcp-client-server/backend/src/infrastructure/graph/: graph_factory.py  utils.py
mcp-client-server/backend/src/infrastructure/llm/: service.py  strategies.py
mcp-client-server/backend/src/mcp/: db_server.py  math_server.py
mcp-client-server/frontend/: next.config.ts  package.json  pnpm-lock.yaml
mcp-client-server/frontend/src/app/: page.tsx
mcp-client-server/frontend/src/app/api/copilotkit/: route.ts
mcp-client-server/frontend/src/app/copilotkit/: interrupt-form.tsx  layout.tsx  page.tsx
mcp-client-server/frontend/src/app/copilotkit/lib/hooks/: use-tasks.tsx
mcp-client-server/frontend/src/app/copilotkit/todo-app/: page.tsx
mcp-client-server/frontend/src/app/copilotkit/todo-app/components/: add-todo.tsx  task.tsx  tasks-list.tsx
mcp-client-server/frontend/src/app/sse/: page.tsx
mcp-client-server/frontend/src/components/: header.tsx
mcp-client-server/src/: main.py
mcp-client-server/src/client/: client.py  multi_server_client.py
mcp-client-server/src/mcp/: math_server.py
mcp-client-server/src/server/: db_server.py
(+802 files in other folders)
